*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.3 ===
* Added lltl::bitset collection with basic methods for storing bit flags.
* Added lltl::phashset collection for quick managing of hash sets of objects.
* Added lltl::ptr_hash_func and lltl::ptr_cmp_func functions for managing
  object pointers which are considered to be unique for each object.
* Added contains() method to lltl::parray and lltl::darray collections.

=== 0.5.2 ===
* Added hash interface for objects.
* Added default hashing function.
* Implemented lltl::pphash collection which allows to use hash maps.
* Added is_empty() method to lltl::parray class.
* Fixed upget() method of lltl::parray.

=== 0.5.1 ===
* added set method to lltl::parray which allows to set single 
  collection item at specified position.
* added set method to lltl::darray which allows to set single 
  collection item at specified position.

=== 0.5.0 ===
* Initial release.
* Implemented darray collection.
* Implemented parray collection.