@@ -8,6 +8,7 @@
 * Added lltl::ptr_hash_func and lltl::ptr_cmp_func functions for managing
   object pointers which are considered to be unique for each object.
 * Added contains() method to lltl::parray and lltl::darray collections.
+* Added lltl::iterator class for work with iterators.
 
 === 0.5.2 ===
 * Added hash interface for objects.
